[package]
name = "tokio-aead"
version = "0.0.0"
authors = [ "Arthur Gautier" ]
license = "MIT/Apache-2.0"
description = "An AEAD encryption/decryption stream for tokio"

[dependencies]
futures = "0.1"
bytes = "0.4"
chacha20-poly1305-aead = "0.1"
rand = "0.5"
log = "0.4.6"

[dev-dependencies]
stderrlog = "0.4.1"
